--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     
     <script>
         //***edit this only for your information***
-        const player = "NATHAN BROOKS";
+        const player = "LOGAN HOLLIDAY";
         const agency = "FEDERAL INVESTIGATION BUREAU";
-        const callsign = "[0461]";
+        const callsign = "[0789]";
         //***        end edit this only         ***
     
         const monthNames = ["JAN", "FEB", "MAR", "APR", "MAY", "JUN", "JUL", "AUG", "SEP", "OCT", "NOV", "DEC"];
