--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         
         <div class="top-right-container">
             <div class="top-right">
-                <img src="FIB_logoC.png" width="64" height="64" border="0">
+                <!-- Aquí modificarás la ruta de tu imágen para el departamento en el que estés en caso de necesitarlo, sino simplemente bastará con
+                que reemplaces la imágen por una tuya manteniendo el nombre-->
+                <img src="logodepartamento.png" width="64" height="64" border="0">
             </div>
             <div class="top-right">
                 REC&nbsp;<i class="fa fa-circle text-danger Blink"></i>&nbsp;&nbsp;AXON&nbsp;BODYCAM&trade;&nbsp;&nbsp;<br />
@@ -78,7 +80,7 @@
     </body>
     
     <script>
-        //***edit this only for your information***
+        //***Solo deberás modificar esto con tu información, modifica solo lo que se encuentra dentro de las comillas***
         const player = "LOGAN HOLLIDAY";
         const agency = "FEDERAL INVESTIGATION BUREAU";
         const callsign = "[0789]";
