--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     
     <script>
         //***Solo deberás modificar esto con tu información, modifica solo lo que se encuentra dentro de las comillas***
-        const player = "LOGAN HOLLIDAY";
+        const player = "NATHAN BROOKS";
         const agency = "FEDERAL INVESTIGATION BUREAU";
-        const callsign = "[0789]";
+        const callsign = "[2461]";
         //***        end edit this only         ***
     
         const monthNames = ["JAN", "FEB", "MAR", "APR", "MAY", "JUN", "JUL", "AUG", "SEP", "OCT", "NOV", "DEC"];
